--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,25 @@
 body, html {
-  height: 100vh;
-  width: 100vh;
-  overflow-y: hidden;
+  max-width: 100%;
+  overflow:hidden;
+  margin: 0px;
 }
 
 .App {
-  /* The image used */
   background-image: url("./images/background.png");
-  height: 100vh;
-  background-position: center;
-  margin-top: -10px;
-  margin-left: -10px;
-  margin-right: -10px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
 
-  width: 100%;
-  position:absolute;
-  text-align: center;
+#Name {
+  max-width:100%;
+  animation-name: nameLoadTransition;
+  animation-duration: 3s;
 }
 
 @keyframes nameLoadTransition {
   from {
-    transform: translateY(10000%);
-
-  }
-
-  to {
+    transform: translateY(100%);
+  } to {
     transform: translateY(0%);
   }
-}
-
-.Name {
-  top: 50%;
-  animation-name: nameLoadTransition;
-  animation-duration: 1.5s;
 }
