--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body, html {
 }
 
 .App {
-  background-image: url("./images/background.png");
+  background-color: #1b1d1e;
   background-repeat: no-repeat;
   background-size: contain;
 }
